test/good/classes/print04.px

class A def
    Int x

class B(A) def
    Float y

print A()

A b = B()
print {b}
